@@ -1,5 +1,11 @@
 2005-10-28  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/hot.c: also moved into Colors/Modify.
+
+	* menus/image-menu.xml.in: moved Info submenu to the bottom.
+
+2005-10-28  Sven Neumann  <sven@gimp.org>
+
 	* app/base/siox.c: applied a patch by Tobias Lenz that makes use
 	of the state that was added to SIOX in order to speed up the tool.
 
